packages/cardhost/app/styles/components/right-edge.css
.right-edge {
  position: fixed;
  right: var(--ch-spacing);
  top: var(--ch-top-edge-height);
  width: var(--ch-right-edge-panel-width);
  max-height: calc(100vh - var(--ch-top-edge-height) - var(--ch-bottom-edge-height));
  border-radius: 10px;
  background-color: var(--ch-dark-background);
  color: white;
  font: 400 13px/18px var(--ch-font-family);
  letter-spacing: 0.035em;
  z-index: var(--ch-edges-z-index);
  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.15);
  overflow-y: auto;
}

.right-edge--pill-selector-container {
  padding: 23px 18px 21px 20px;
}

.pill-selector {
  display: flex;
  min-width: var(--ch-component-width);
  width: 100%;
  height: var(--ch-component-height);
  background-color: var(--ch-default);
  color: white;
  font: 400 13px/18px var(--ch-font-family);
  letter-spacing: 0.035em;
  border: 1px solid var(--ch-default);
  border-radius: 20px;
}

.pill-option {
  flex: 1;
  padding: 10px 15px;
  text-align: center;
}

.pill-option.selected {
  background-color: var(--ch-foreground);
  color: var(--ch-highlight);
  font-weight: 600;
  border-radius: inherit;
}

.right-edge--sections {
  width: var(--ch-right-edge-panel-width);
}

.right-edge--section {
  padding: 10px var(--ch-spacing) 11px;
  border-top: 2px solid var(--ch-default);
  width: var(--ch-right-edge-panel-width);
  position: relative;
}

.right-edge--section .section-toggle-btn {
  position: absolute;
  width: 10px;
  height: 10px;
  top: 10px;
  right: 10px;
  background-image: url('/assets/images/icons/arrow-show-hide-collapsed.svg');
  background-repeat: no-repeat;
  background-position: top right;
  background-size: 10px 10px;
  border: none;
  background-color: transparent;
  text-indent: -9999px;
}

.right-edge--section .section-toggle-btn.expanded {
  background-image: url('/assets/images/icons/arrow-show-hide-expanded.svg');
}
.right-edge--section-header {
  font-weight: 600;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: capitalize;
  height: 18px;
}

.right-edge--section-header .right-edge--selected-field-title {
  height: 18px;
}

.right-edge--section-header--adopted {
  font-weight: 400;
  color: var(--ch-light-op60);
  text-transform: none;
}

.right-edge--section-header + .right-edge--item,
.right-edge--section-header + .right-edge--animation-container {
  margin-top: 26px;
}

.right-edge--item {
  padding-bottom: 16px;
}

.right-edge--label {
  display: block;
  padding-bottom: 4px;
  color: var(--ch-light-op60);
  font: 400 13px/18px var(--ch-font-family);
  letter-spacing: 0.035em;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: capitalize;
}

.section-btn-container {
  text-align: right;
}

.section-btn {
  display: inline-block;
  margin: 0;
  padding: 10px 0 10px 10px;
  background: none;
  border: none;
  color: white;
  font: 600 13px/18px var(--ch-font-family);
  letter-spacing: 0.035em;
  opacity: 0.6;
}

.section-btn:focus,
.section-btn:hover {
  opacity: 1;
  cursor: pointer;
}

.right-edge--item .cs-input-group--helper-text {
  height: auto;
}

.right-edge--item .cs-input-group--helper-text.invalid {
  margin-bottom: 10px;
}

